added styles acc to reqs

--- a/block-BHaabk/index.html
+++ b/block-BHaabk/index.html
@@ -11,3 +11,62 @@
 
 7. Use flexbox properties and values to create columns.
  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flexbox</title>
+    <script src="https://use.fontawesome.com/41be6dfa6e.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <header>
+      <div class="brand-container">
+        <h2 class="brand-name">CakeIt!</h2>
+        <nav>
+          <a href="#">Home</a><a href="#">Customize</a
+          ><a href="#">Contact Us</a>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="main-container">
+        <article class="intro">
+          <div class="content">
+            <h1>We bake cakes that stand-out!</h1>
+            <h3>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+              eligendi tempora doloremque, dolores mollitia ipsum pariatur?
+              Laboriosam quidem, nemo reprehenderit at error, sunt deleniti,
+              dicta quae deserunt ducimus consectetur. Odio.
+            </h3>
+          </div>
+          <div class="cake-image">
+            <img src="assets/cake.jpg" alt="cake_image" />
+          </div>
+        </article>
+
+        <article class="gallery">
+          <img src="assets/cake1.png" alt="cake1" /><img
+            src="assets/cake2.jpg"
+            alt="cake2"
+          /><img src="assets/cake3.jpeg" alt="cake3" />
+
+          <img src="assets/cake4.jpg" alt="cake4" /><img
+            src="assets/cake5.jpg"
+            alt="cake5"
+          /><img src="assets/cake6.jpg" alt="cake6" />
+        </article>
+      </div>
+    </main>
+    <footer>
+      <p>
+        <i class="fa fa-copyright" aria-hidden="true"></i> CakeIt Inc. All
+        rights reserved 2020
+      </p>
+    </footer>
+  </body>
+</html>
